@@ -5,7 +5,7 @@
  * under the terms of the GNU General Public License. See doc/COPYING
  * for more information.
  *
- * $Id: player.c,v 1.51 2007-12-05 11:10:55 cmatsuoka Exp $
+ * $Id: player.c,v 1.52 2007-12-05 11:57:50 cmatsuoka Exp $
  */
 
 /*
@@ -825,8 +825,11 @@ next_order:
 	}
 
 	/* Skip invalid patterns */
-	if (m->xxo[ord] >= m->xxh->pat)
+	if (m->xxo[ord] >= m->xxh->pat) {
+           if (m->xxo[ord] == 0xff)            /* S3M uses 0xff as end mark */
+                ord = m->xxh->len;
 	    continue;
+	}
 
 	r = m->xxp[m->xxo[ord]]->rows;
 	if (p->flow.jumpline >= r)
